[UI Fix] Hide title when screen is too small

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -93,3 +93,21 @@ a {
   font-weight: 500;
   font-size: 20px;
 }
+
+@media all and (max-width: 959px) {
+  .toolbar-title{
+    display:block;
+  }
+}
+
+@media all and (max-width: 720px) {
+  .toolbar-title{
+    display:none;
+  }
+}
+
+@media all and (max-width: 479px) {
+  .toolbar-title{
+    display:none;
+  }
+}
